k8s/templates/manifests/webapp-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-deploy
  namespace: webapp
spec:
  selector:
    matchLabels:
      run: devops-webapp-sample
  replicas: 1
  template:
    metadata:
      labels:
        run: devops-webapp-sample
    spec:
      containers:
        - name: webapp-sample
          image: revianlabs/devops-webapp-sample:latest
          ports:
            - containerPort: 8080
      nodeSelector: 
        topology.ebs.csi.aws.com/zone: "eu-central-1a"
