k8s/templates/manifests/db-statefulset.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-svc
  namespace: db
  labels:
    app: db-mysql
spec:
  ports:
    - port: 3306
      targetPort: 3306
  selector:
    app: db-mysql
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: db-ss
  namespace: db
spec:
  selector:
    matchLabels:
      app: db-mysql # has to match .spec.template.metadata.labels

  serviceName: "db-svc"
  replicas: 1 # by default is 1
  minReadySeconds: 10 # by default is 0
  template:
    metadata:
      labels:
        app: db-mysql # has to match .spec.selector.matchLabels
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: db-mysql
        image: mysql
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: mysql-storage
          mountPath: /var/lib/mysql
      nodeSelector:
        topology.ebs.csi.aws.com/zone: "eu-central-1a"
  volumeClaimTemplates:
  - metadata:
      name: mysql-storage
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: "ebs-sc"
      resources:
        requests:
          storage: 1Gi
