k8s/templates/manifests/webapp-svc.yaml

apiVersion: v1
kind: Service
metadata:
  name: webapp-svc
  namespace: webapp
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    run: devops-webapp-sample
  type: NodePort
